[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/UI/ItemCollectedLayer.gd" type="Script" id=1]

[node name="ItemCollectedLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
centered = false

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 32, 0 )
scale = Vector2( 2, 2 )
centered = false

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 0, 32 )
scale = Vector2( 2, 2 )
centered = false

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 32, 32 )
scale = Vector2( 2, 2 )
centered = false
